# gnucash_customer_reports

./: .gitignore  README.md  pyproject.toml
src/gcr/: gcr.py
src/gcr/templates/: default.template
